# climate_sensor

./: .gitignore  CMakeLists.txt  Kconfig  README.md  app.conf  display.conf  prj.conf  segger_rtt.conf  sensors.conf  shell.conf  ssd1306_128x32.overlay  ssd1306_128x64.overlay
lib/display_ctl/: display_ctl.c  display_ctl.h
lib/sens/: battery.c  battery.h  sens.c  sens.h
src/: main.c
ssd1306_driver_patch_v3.1/: 0001-ssd1306-fixup-driver-bug.patch
